[BlackBerry] Compiler warning in LayerWebKitThread.cpp https://bugs.webkit.org/show_bug.cgi?id=114277

Reviewed by Carlos Garcia Campos.

All the relevant WTF::Vector APIs use size_t, storing the position in
an int resulted in a compiler warning. Fixed by switching to size_t.

No change in behavior, no new tests.

PR 323753

* platform/graphics/blackberry/LayerWebKitThread.cpp:
(WebCore::LayerWebKitThread::remove):
(WebCore::LayerWebKitThread::replaceSublayer):


Canonical link: https://commits.webkit.org/132812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148199 268f45cc-cd09-0410-ab3c-d52691b4dbfc